update profile end point on the cost of multipart/form_data, and added /myprofile api
